overlay-uris
Overlays have a URI property, which may refer to a file: URI, rather than separate URI and File properties