@@ -5,12 +5,9 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.io.ByteArrayOutputStream;
-import java.io.File;
-import java.io.FileInputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.URI;
-import java.net.URL;
 import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.ConcurrentHashMap;
@@ -24,20 +21,9 @@ class ImageOverlayCache {
     private static final Logger LOGGER = LoggerFactory.
             getLogger(ImageOverlayCache.class);
 
-    private final Set<String> downloadingOverlays =
+    private final Set<URI> downloadingOverlays =
             new ConcurrentSkipListSet<>();
-    private final Map<String, byte[]> overlays = new ConcurrentHashMap<>();
-
-    private static final Object lock = new Object();
-
-    /**
-     * @param file Overlay image file.
-     * @return Overlay image.
-     * @throws IOException If the image cannot be accessed.
-     */
-    byte[] putAndGet(File file) throws IOException {
-        return putAndGet(file.getAbsolutePath());
-    }
+    private final Map<URI, byte[]> overlays = new ConcurrentHashMap<>();
 
     /**
      * @param uri Overlay image URI.
@@ -45,22 +31,13 @@ class ImageOverlayCache {
      * @throws IOException If the image cannot be accessed.
      */
     byte[] putAndGet(URI uri) throws IOException {
-        return putAndGet(uri.toString());
-    }
-
-    /**
-     * @param pathnameOrURL Pathname or URL of the overlay image.
-     * @return Overlay image.
-     * @throws IOException If the image cannot be accessed.
-     */
-    byte[] putAndGet(String pathnameOrURL) throws IOException {
         // If the overlay is currently being downloaded in another thread,
         // wait for it to download.
-        synchronized (lock) {
-            while (downloadingOverlays.contains(pathnameOrURL)) {
+        synchronized (this) {
+            while (downloadingOverlays.contains(uri)) {
                 try {
-                    LOGGER.debug("putAndGet(): waiting on {}", pathnameOrURL);
-                    lock.wait();
+                    LOGGER.debug("putAndGet(): waiting on {}", uri);
+                    wait();
                 } catch (InterruptedException e) {
                     break;
                 }
@@ -68,38 +45,28 @@ class ImageOverlayCache {
         }
 
         // Try to pluck it out of the cache.
-        byte[] cachedValue = overlays.get(pathnameOrURL);
+        byte[] cachedValue = overlays.get(uri);
         if (cachedValue != null) {
-            LOGGER.debug("putAndGet(): hit for {}", pathnameOrURL);
+            LOGGER.debug("putAndGet(): hit for {}", uri);
             return cachedValue;
         }
 
-        LOGGER.debug("putAndGet(): miss for {}", pathnameOrURL);
+        LOGGER.debug("putAndGet(): miss for {}", uri);
 
         // It's not being downloaded and isn't cached, so download and cache it.
-        InputStream is = null;
+        downloadingOverlays.add(uri);
         ByteArrayOutputStream os = new ByteArrayOutputStream();
-        try {
-            downloadingOverlays.add(pathnameOrURL);
-
-            if (ImageOverlay.SUPPORTED_URI_SCHEMES.stream()
-                    .filter(pathnameOrURL::startsWith).count() > 0) {
-                final URL url = new URL(pathnameOrURL);
-                is = url.openStream();
-            } else {
-                is = new FileInputStream(pathnameOrURL);
-            }
+        try (InputStream is = uri.toURL().openStream()) {
             IOUtils.copy(is, os);
-            overlays.put(pathnameOrURL, os.toByteArray());
+            overlays.put(uri, os.toByteArray());
         } finally {
-            IOUtils.closeQuietly(is);
             IOUtils.closeQuietly(os);
-            downloadingOverlays.remove(pathnameOrURL);
-            synchronized (lock) {
-                lock.notifyAll();
+            downloadingOverlays.remove(uri);
+            synchronized (this) {
+                notifyAll();
             }
         }
-        return overlays.get(pathnameOrURL);
+        return overlays.get(uri);
     }
 
 }
